asm_tests/other_testfiles/invalid_files/error60.s
.name "MORO"
.comment "MORJESTA!"

lld%12 , .comment "ööööö what?????" r12
